<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RealEstate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="street_hint">Street Address</string>
    <string name="city_hint">City</string>
    <string name="state_label">State* :</string>

    <string-array name="states_array">
        <item value="NA">Choose a State</item>
        <item value="AK">AK</item>
        <item value="AL">AL</item>
        <item value="AR">AR</item>
        <item value="AZ">AZ</item>
        <item value="CA">CA</item>
        <item value="CO">CO</item>
        <item value="CT">CT</item>
        <item value="DC">DC</item>
        <item value="DE">DE</item>
        <item value="GA">GA</item>
        <item value="FL">FL</item>
        <item value="HI">HI</item>
        <item value="IA">IA</item>
        <item value="ID">ID</item>
        <item value="IL">IL</item>
        <item value="IN">IN</item>
        <item value="KS">KS</item>
        <item value="KY">KY</item>
        <item value="LA">LA</item>
        <item value="MA">MA</item>
        <item value="MD">MD</item>
        <item value="ME">ME</item>
        <item value="MI">MI</item>
        <item value="MN">MN</item>
        <item value="MO">MO</item>
        <item value="MS">MS</item>
        <item value="MT">MT</item>
        <item value="NC">NC</item>
        <item value="ND">ND</item>
        <item value="NE">NE</item>
        <item value="NH">NH</item>
        <item value="NJ">NJ</item>
        <item value="NM">NM</item>
        <item value="NV">NV</item>
        <item value="NY">NY</item>
        <item value="OH">OH</item>
        <item value="OK">OK</item>
        <item value="OR">OR</item>
        <item value="PA">PA</item>
        <item value="RI">RI</item>
        <item value="SC">SC</item>
        <item value="SD">SD</item>
        <item value="TN">TN</item>
        <item value="TX">TX</item>
        <item value="UT">UT</item>
        <item value="VA">VA</item>
        <item value="VT">VT</item>
        <item value="WA">WA</item>
        <item value="WI">WI</item>
        <item value="WV">WV</item>
        <item value="WY">WY</item>
    </string-array>

    <string name="search_text">Search</string>
    <string name="title_display">Search Your Property Here</string>
    <string name="street_label">Street* :</string>
    <string name="city_label">City* :</string>
    <string name="title_activity_results">Results from Zillow</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_charts">ChartsActivity</string>

</resources>
