<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg"
    android:label="Real Estate Search App"
    tools:context="com.example.realestate.MainActivity" >

   
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_display"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/street_label"
            android:textColor="#ffffff"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/streetInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" 
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:hint="@string/street_hint">

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/err1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
              android:textColor="#ff0000"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city_label"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/cityInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:hint="@string/city_hint"
             android:layout_marginTop="15dp"
             android:textColor="#ffffff"
            android:ems="10" />

        <TextView
            android:id="@+id/err2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#ff0000"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/textView4"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state_label"
            android:layout_marginTop="15dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/spinner1"
            android:textColor="#ffffff"
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" 
             android:entries="@array/states_array"/>

        <TextView
            android:id="@+id/err3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="#ff0000"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="#ffffff"
                android:text="@string/search_text" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:gravity="right"
                android:src="@drawable/zillow" />
        </LinearLayout>
 <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:gravity="center"
            android:textColor="#ff0000"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
